--- a/languages/php/SBOM/laravel/trivy/time.txt
+++ b/languages/php/SBOM/laravel/trivy/time.txt
@@ -1,11 +1,11 @@
 Days              : 0
 Hours             : 0
 Minutes           : 0
-Seconds           : 7
-Milliseconds      : 353
-Ticks             : 73532488
-TotalDays         : 8.51070462962963E-05
-TotalHours        : 0.00204256911111111
-TotalMinutes      : 0.122554146666667
-TotalSeconds      : 7.3532488
-TotalMilliseconds : 7353.2488
+Seconds           : 29
+Milliseconds      : 12
+Ticks             : 290128204
+TotalDays         : 0.000335796532407407
+TotalHours        : 0.00805911677777778
+TotalMinutes      : 0.483547006666667
+TotalSeconds      : 29.0128204
+TotalMilliseconds : 29012.8204
